--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,30 @@
   <link rel="icon" href="images/favico.png" />
 </head>
 <body ng-cloak ng-controller="AppController">
-  <h1>KPM</h1>
-  <div ui-view></div>
+  <header id="header">
+    <div class="inner">
+      <div class="search" ng-controller="SearchController">
+        <input type="text" name="search" placeholder="search..." />
+        <i class="fa fa-search"></i>
+      </div>
+    </div>
+  </header>
+  <section id="banner">
+    <div class="inner">
+      <img src="images/kubespray-logo.png" class="logo" />
+      <h1>KPM, by Kubespray</h1>
+      <p class="description">Registry of kubernetes ready to use applications</p>
+    </div>
+  </section>
+  <section id="main">
+    <div class="inner" ui-view>
+    </div>
+  </section>
+  <footer id="footer">
+    <div class="inner">
+      By <a href="http://kubespray.io">kubespray.io</a>
+    </div>
+  </footer>
 
 	<!-- Angular.js Libraries -->
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
@@ -24,6 +46,7 @@
   <script src="app/directives/ui-loading.js"></script>
 	<script src="app/services/kpm_api.js"></script>
 	<script src="app/modules/packages/packages_controller.js"></script>
+	<script src="app/modules/search/search_controller.js"></script>
   <!-- /build -->
 
   <!-- build:js js/templates.js -->
