--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       </nav>
       <nav ng-if="session.isAuthenticated()">
         Connected as <a href>{{session.username}}</a> |
-        <a href>Logout</a>
+        <a href ng-click="session.logout()">Logout</a>
       </nav>
 
       <div class="search" ng-controller="SearchController">
