Added favicon - fix #16

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 
   <!-- Application CSS -->
   <link rel="stylesheet" href="style/style.min.css" />
-  <link rel="icon" href="images/favico.png" />
+
+  <link rel="icon" type="image/png" href="images/favicon.png" />
 </head>
 <body ng-cloak ng-controller="AppController">
   <header id="header">
