Sort package list with sort_order API

--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,7 @@
   <script src="app/modules/user/signup_controller.js"></script>
   <script src="app/modules/user/login_controller.js"></script>
   <script src="app/modules/packages/packages_controller.js"></script>
+  <script src="app/modules/packages/package_details_controller.js"></script>
   <script src="app/modules/search/search_controller.js"></script>
   <script src="app/models/user.js"></script>
   <!-- /build -->
