--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,13 @@
   <!-- Angular Material CSS -->
   <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css" />
 
-  <!-- Prism -->
+  <!-- Vendor CSS -->
+  <!-- build:css style/vendor.min.css -->
   <link rel="stylesheet" href="vendor/prism/prism.css" />
+  <!-- /build -->
 
   <!-- Application CSS -->
-  <link rel="stylesheet" href="style/style.min.css" />
+  <link rel="stylesheet" href="style/app.min.css" />
 
   <link rel="icon" type="image/png" href="images/favicon.png" />
 </head>
@@ -92,8 +94,10 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 
   <!-- Vendor -->
+  <!-- build:js js/vendor.min.js-->
   <script src="vendor/md5/md5.js"></script>
   <script src="vendor/prism/prism.js"></script>
+  <!-- /build -->
 
   <!-- App configuration -->
   <script src="config/config.js"></script>
