--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,8 @@
         </a> |
         <a href ng-click="session.logout()">Logout</a>
       </nav>
-      <form ng-controller="SearchController as ctrl" ng-submit="ctrl.submit()" class="search">
+      <form ng-controller="SearchController as ctrl"
+        ng-submit="ctrl.submit()" class="search">
         <md-autocomplete
           md-search-text="ctrl.searchText"
           md-items="item in ctrl.querySearch(ctrl.searchText)"
