--- a/src/index.html
+++ b/src/index.html
@@ -146,6 +146,7 @@
   <script src="app/modules/settings/organizations_controller.js"></script>
   <script src="app/modules/packages/packages_controller.js"></script>
   <script src="app/modules/packages/package_details_controller.js"></script>
+  <script src="app/modules/organization/organization_controller.js"></script>
   <script src="app/modules/search/search_controller.js"></script>
   <script src="app/models/user.js"></script>
   <!-- /build -->
