Fix logout + show user tokens (fix #9)

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 <body ng-cloak ng-controller="AppController">
   <header id="header">
     <div class="inner">
-      <a ui-sref="home">
+      <a ui-sref="packages">
         <img src="images/kubespray-80px.png" alt="logo" />
       </a>
       <form ng-controller="SearchController as ctrl"
@@ -92,7 +92,7 @@
   </section>
   <section id="banner-small" ng-if="stateName != 'home'">
     <div class="inner">
-      <a ui-sref="packages">Browse packages</a>
+      KPM
     </div>
   </section>
   <section id="main">
