Improved package presentation

--- a/src/index.html
+++ b/src/index.html
@@ -153,6 +153,7 @@
   <script src="app/modules/packages/package_details_controller.js"></script>
   <script src="app/modules/organization/organization_controller.js"></script>
   <script src="app/modules/search/search_controller.js"></script>
+  <script src="app/models/package.js"></script>
   <script src="app/models/user.js"></script>
   <!-- /build -->
 
